force-app/main/default/objects/Time_Card_Details__c/Time_Card_Details__c.object-meta.xml
<CustomObject>
    <label>Time Card Details</label>
    <nameField>
        <label>Time Card Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Card Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>