force-app/main/default/objects/Time_Card_Details__c/fields/Admin_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Admin_Time_Spent__c</fullName>
    <label>Admin Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>