force-app/main/default/objects/Time_Card_Details__c/fields/Administrative_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Time_Spent__c</fullName>
    <label>Administrative Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>