force-app/main/default/objects/Time_Card_Details__c/fields/Bereavement_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Bereavement_Time_Spent__c</fullName>
    <label>Bereavement Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>