force-app/main/default/objects/Time_Card_Details__c/fields/Day_of_Week_Name__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week_Name__c</fullName>
    <label>Day of Week Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>