force-app/main/default/objects/Time_Card_Details__c/fields/In_Lieu_Days_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>In_Lieu_Days_Time_Spent__c</fullName>
    <label>In Lieu Days Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>