force-app/main/default/objects/Time_Card_Details__c/fields/Non_Absence_Time__c.field-meta.xml
<CustomField>
    <fullName>Non_Absence_Time__c</fullName>
    <formula>Administrative_Time_Spent__c + Consulting_Time_Spent__c + Meeting_Time_Spent__c + Project_Time_Spent__c + Training_Time_Spent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Absence Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>