force-app/main/default/objects/Time_Card_Details__c/fields/Professional_Services_Work_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Work_Time_Spent__c</fullName>
    <label>Professional Services Work Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>