force-app/main/default/objects/Time_Card_Details__c/fields/Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Time_Card__c</fullName>
    <label>Time Card</label>
    <referenceTo>Time_Card__c</referenceTo>
    <relationshipName>Time_Card_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>