force-app/main/default/objects/Time_Card_Details__c/fields/Total_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Spent__c</fullName>
    <formula>Absence_Time_Spent__c + Admin_Time_Spent__c + Consulting_Time_Spent__c + Meeting_Time_Spent__c + Project_Time_Spent__c + Training_Time_Spent__c + Bereavement_Time_Spent__c + Holiday_Time_Spent__c + In_Lieu_Days_Time_Spent__c + Jury_Duty_Time_Spent__c + Professional_Services_Work_Time_Spent__c + Sick_Time_Spent__c + Vacation_Time_Spent__c +Personal_Time_Spent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>