force-app/main/default/objects/Time_Card_Details__c/fields/Vacation_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Time_Spent__c</fullName>
    <label>Vacation Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>